# remind-me-pwa

./: .gitignore  404.html  APP_PAGE_IMPROVEMENT_PLAN.md  CHANGELOG.md  CODE_REVIEW.md  Cargo-workspace.toml  Cargo.toml  Cargo.toml.backup  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dioxus.toml  LICENSE  MIGRATION_PROGRESS.md  MOBILE_I18N_REVIEW.md  PR_DESCRIPTION_PR5.md  PR_INFO.md  RALPH_TASK.md  README.md  WORKSPACE_MIGRATION.md  WORKSPACE_PROPOSAL.md  WORKSPACE_STATUS.md  build-mobile-android.sh  build-mobile-ios.sh  deploy.sh  index.html  lighthouse-audit.sh  robots.txt  run-dev.sh  run-release.sh  run.sh
.cargo/: config.toml
.cursor/: CODE_STANDARDS_100.md  DEVELOPMENT_VS_PRODUCTION.md  LCP_OPTIMIZATION.md  LIGHTHOUSE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_100.md  changelog-guide.md
.cursor/docs/: DEAD_CODE_ANALYSIS.md  README.md
.cursor/docs/architecture/: UI_COMPONENT_ARCHITECTURE.md
.cursor/docs/architecture/archive/: ARCHITECTURE_DECISION.md  ARCHITECTURE_OVERVIEW.md  BLOC_ARCHITECTURE_PLAN.md  README.md
.cursor/docs/migrations/: DIOXUS_0.7_UPGRADE.md  FIXING_COMPONENTS.md  FULL_STACK_MIGRATION_GUIDE.md  I18NRS_MIGRATION.md
.cursor/docs/plans/: IMPLEMENTATION_PLAN.md  MODULE_STRUCTURE.md  PROJECT_REVIEW.md  PR_DESCRIPTION.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  UI_COMPONENTS_IMPLEMENTATION.md
.cursor/rules/: README.md  skills.md
.cursor/rules/core/: code-formatting.mdc  code-standards-100.mdc  cursor-rules-summary.mdc  lighthouse-100-standards.mdc  project-structure.mdc  rust-best-practices.mdc
.cursor/rules/features/: changelog-management.mdc  deployment.mdc  error-handling.mdc  full-stack-architecture.mdc  i18n.mdc  lighthouse-audit-automation.mdc  lighthouse-optimization.mdc  media-caching.mdc  page-templates.mdc  pwa-development.mdc  routing.mdc  storage-comparison.mdc  storage.mdc  testing.mdc
.cursor/skills/: README.md
.cursor/skills/changelog-management/: SKILL.md
.cursor/skills/dioxus-component-patterns/: SKILL.md
.cursor/skills/dioxus-pwa-development/: SKILL.md
.cursor/skills/lighthouse-optimization/: SKILL.md
.cursor/skills/pwa-storage-patterns/: SKILL.md
.cursor/skills/rust-wasm-optimization/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: deploy.yml  github-pages-deploy.yml
apps/mobile/: Cargo.toml
apps/mobile/src/: main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
assets/: .gitkeep  README-SEO.md  README.md  app-dxh41f6bb96e42b1f5.css  app-dxhddf0e82e99c6cb14.css  base-dxh5ef3dcfcef11954c.css  components-dxha9e7c27c553f3d8.css  favicon-16x16-dxh6f53c47de0b17a10.avif  favicon-32x32-dxh9d36c98e7e88bbae.avif  icon-512x512-dxhbea81b9ff8eae19.avif  landing-dxha890fe187ccc20.css  landing-dxhc7c6b1d001e4a1c.css  layout-dxhdf8e85bf20525ad5.css  manifest-dxh4d3b896b142af314.json  manifest-dxh7e4aee2948dcadea.json  manifest.json  remind-me-pwa-06c3e39297cbfc98.js  remind-me-pwa-06c3e39297cbfc98.js.br  remind-me-pwa-06ee6199730f3ebc.js  remind-me-pwa-06ee6199730f3ebc.js.br  remind-me-pwa-06f45bc2bfce8ba2.js  remind-me-pwa-06f45bc2bfce8ba2.js.br  remind-me-pwa-1d0ce02c573b9332.js  remind-me-pwa-1d0ce02c573b9332.js.br  remind-me-pwa-36595448358dac0b.js  remind-me-pwa-36595448358dac0b.js.br  remind-me-pwa-4bde927d23abe778.js  remind-me-pwa-4bde927d23abe778.js.br  remind-me-pwa-6af2079c06c42bb8.js  remind-me-pwa-6af2079c06c42bb8.js.br  remind-me-pwa-6ed97915933dccc5.js  remind-me-pwa-6ed97915933dccc5.js.br  remind-me-pwa-9858fd4bf6b106cb.js  remind-me-pwa-9858fd4bf6b106cb.js.br  remind-me-pwa-9b4a742b8d4da552.js  remind-me-pwa-9b4a742b8d4da552.js.br  remind-me-pwa-a77e872e9e3915af.js  remind-me-pwa-a77e872e9e3915af.js.br  remind-me-pwa-b169af2fa43418c0.js  remind-me-pwa-b169af2fa43418c0.js.br  (+73 more)
assets/css/: app.css  base.css  components.css  landing.css  layout.css  responsive.css  utilities.css
assets/i18n/: en.json  zh-Hans.json  zh-Hant.json  zh.json
assets/icons/app/: icon-192x192.avif
assets/images/backgrounds/: desktop.avif  mobile.avif
crates/components/: Cargo.toml  build.rs
crates/components/src/: cards.rs  faq_section.rs  features_section.rs  final_cta_section.rs  forms.rs  hero_section.rs  i18n.rs  landing.rs  landing_layout.rs  landing_new.rs  language_switcher.rs  legal.rs  lib.rs  media.rs  modals.rs  page_template.rs  pricing_section.rs  reminder_app.rs  statistics.rs  tag_form.rs  tag_manager.rs  testimonials_section.rs  workflow_section.rs
crates/components/src/app_views/: calendar_view.rs  card_view.rs  folder_view.rs  list_view.rs
crates/mobile/: Cargo.toml
crates/mobile/src/: app.rs  i18n.rs  lib.rs  storage.rs
crates/shared/: Cargo.toml
crates/shared/src/: i18n.rs  lib.rs  models.rs  router.rs  storage.rs  utils.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  utils.rs
crates/ui/src/components/: alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  empty_state.rs  form.rs  input.rs  loading.rs  mod.rs  modal.rs  select.rs  textarea.rs  toast.rs
crates/ui/src/data/: empty_state.rs  list.rs  mod.rs  table.rs
crates/ui/src/layout/: app_layout.rs  footer.rs  mod.rs  navbar.rs  sidebar.rs
crates/ui/src/theme/: colors.rs  mod.rs  spacing.rs  typography.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: app.rs  deployment.rs  i18n.rs  lib.rs  router.rs  storage.rs
crates/web/src/services/: mod.rs
docs/: .gitkeep
mobile/: README.md
src/: app.rs  deployment.rs  i18n.rs  i18n_new.rs  lib.rs  main.rs  models.rs  router.rs  storage.rs  storage_platform.rs  utils.rs
src/components/: cards.rs  faq_section.rs  final_cta_section.rs  forms.rs  hero_section.rs  landing.rs  landing_layout.rs  landing_new.rs  language_switcher.rs  legal.rs  mod.rs  modals.rs  page_template.rs  pricing_section.rs  reminder_app.rs  statistics.rs  tag_form.rs  tag_manager.rs  workflow_section.rs
src/components/app_views/: calendar_view.rs  card_view.rs  folder_view.rs  list_view.rs  mod.rs
src/services/: media_cache.rs  mod.rs
