[package]
name = "remind-me-pwa"
version = "0.0.1"
edition = "2021"

[dependencies]
# Dioxus 0.7 - All packages compatible with 0.7.x
dioxus = { version = "0.7", features = ["web"] }
dioxus-router = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }


# Minimize web-sys features - only include what's absolutely necessary
# Dioxus already provides most web APIs through wasm-bindgen, but we need web-sys
# for DOM manipulation (removing Google Fonts links) and localStorage access
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Document", "HtmlElement", "Element", "Node", "History", "Event", "Blob", "Url"] }

# js-sys for JavaScript interop (used for History API push_state)
js-sys = "0.3"

# wasm-bindgen for closures and JavaScript interop
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

# UI Component Library
remind-me-ui = { path = "./crates/ui" }

# Official Dioxus Components (now compatible with Dioxus 0.7)
dioxus_components = "0.1.2"

# Panic hook for better error messages in WASM
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = "thin"  # Use thin LTO instead of full LTO for faster builds and WASM compatibility
codegen-units = 1
panic = "abort"
# Note: strip is disabled for WASM builds (handled by wasm-release profile)
# strip = true  # Disabled - WASM doesn't support strip the same way

[profile.dev]
incremental = true
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 16  # More units = faster compilation, slightly larger binary
lto = false                        # Disable for dev builds

# WASM release profile - optimized for size and performance
# IMPORTANT: debug = true is required for Dioxus asset! macro to work correctly
# The asset! macro needs debug symbols to resolve asset paths at runtime
# Without debug symbols, asset URLs are replaced with placeholder error messages
# Note: This increases WASM size but is necessary for assets to load correctly
[profile.wasm-release]
inherits = "release"
opt-level = "s"                    # Optimize for size (common for WASM)
lto = "thin"                       # Thin LTO for WASM
codegen-units = 1                  # Better optimization
strip = false                      # WASM handles stripping differently
debug = true                       # REQUIRED: Dioxus asset! macro needs debug symbols
panic = "abort"                    # Smaller WASM binary
overflow-checks = false            # Better performance

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


