[workspace]
members = [
    "crates/shared",
    "crates/ui",
    "crates/components",
    "crates/web",
    "crates/mobile",
    "apps/web",
    "apps/mobile",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Dioxus 0.7
dioxus = { version = "0.7", default-features = false }
dioxus-router = "0.7"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web dependencies
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Document", "HtmlElement", "Element", "Node", "History", "Event", "Blob", "Url", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition", "DomRect", "DomRectReadOnly"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

# Mobile dependencies (currently alpha - check available features)
dioxus-mobile = { version = "0.7.0-alpha.2" }

# Server dependencies (not in workspace - add to specific crates that need them)
# axum = { version = "0.7" }
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# tower-http = { version = "0.5", features = ["fs"] }
# dioxus-ssr = { version = "0.7" }

# Chrono (non-WASM only)
chrono = { version = "0.4", features = ["serde", "clock"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 16
lto = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = false
debug = false
panic = "unwind"
overflow-checks = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

