[package]
name = "remind-me-web-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
remind-me-web = { path = "../../crates/web" }
dioxus = { workspace = true, features = ["web", "launch"] }
console_error_panic_hook = { workspace = true }

