[package]
name = "remind-me-components"
version.workspace = true
edition.workspace = true

[dependencies]
# Shared code
remind-me-shared = { path = "../shared" }
remind-me-ui = { path = "../ui" }

# Dioxus for hooks (components need Dioxus for hooks)
# i18n hooks will be provided via feature flags or platform-specific implementations

# Dioxus
dioxus = { workspace = true, features = ["macro", "signals", "html", "hooks"] }
dioxus-router = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

