[package]
name = "remind-me-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dioxus 0.7 - Upgraded from 0.6
dioxus = { version = "0.7", default-features = false, features = ["web", "macro", "signals", "html", "hooks"] }

serde = { version = "1.0", features = ["derive"] }

# Optional: Icons
# materials_icons = "0.1"

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }

