[package]
name = "remind-me-web"
version.workspace = true
edition.workspace = true

[dependencies]
# Shared code
remind-me-shared = { path = "../shared" }
remind-me-ui = { path = "../ui" }

# Dioxus
dioxus = { workspace = true, features = ["web", "macro", "signals", "html", "hooks", "asset", "launch"] }
dioxus-router = { workspace = true }

# Web-specific
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# i18n support
[target.'cfg(target_arch = "wasm32")'.dependencies]
# web-sys already included above

